test/asm/uninit03.err
Error: uninit03.asm: 14: uninitialized data in non-UNINIT segment:
_bill   dw  ?
             ^
Errors: 1
